crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__builtin_filter_always_valid.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|title }}

Diagnostics (0)
