crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__builtin_tag_always_available.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% csrf_token %}

Diagnostics (0)
