crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__comment_block_content_skipped.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% comment %}{% trans 'hello' %}{% endcomment %}

Diagnostics (0)
