crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__content_after_opaque_block_still_validated.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% verbatim %}{% trans 'skip' %}{% endverbatim %}{% trans 'check' %}

Diagnostics (1)
1. UnloadedTag: Tag 'trans' requires {% load i18n %}
    --> test.html:1:50
   1 | {% verbatim %}{% trans 'skip' %}{% endverbatim %}{% trans 'check' %}
     |                                                  ^^^^^^^^^^^^^^^^^^^
