crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__filter_after_load_is_valid.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load humanize %}
   2 | {{ value|apnumber }}

Diagnostics (0)
