crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__filter_in_multiple_libraries_produces_s113.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|myfilter }}

Diagnostics (1)
1. AmbiguousUnloadedFilter: Filter 'myfilter' is defined in multiple libraries: ["lib_a", "lib_b"]
    --> test.html:1:10
   1 | {{ value|myfilter }}
     |          ^^^^^^^^
