crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__filter_inside_verbatim_skipped.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% verbatim %}{{ value|intcomma }}{% endverbatim %}

Diagnostics (0)
