crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__inspector_unavailable_no_filter_diagnostics.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|nonexistent }}{{ x|apnumber }}

Diagnostics (0)
