crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__inspector_unavailable_no_library_diagnostics.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load nonexistent %}

Diagnostics (0)
